* Bug #43528: Fix small gallery names beeing slightly cut off at the bottom
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-4.2-0@78136 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-web/css/site/gallerypane.styl
+++ b/management/univention-web/css/site/gallerypane.styl
@@ -66,7 +66,6 @@
 			word-break: break-word
 			margin-right: 24px
 			max-height: 26px
-			overflow: hidden
 
 		.umcGalleryDescription
 			color: $text-color-lightest
